--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.3",
-    "@types/react-dom": "^17.0.15",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "axios": "^0.26.1",
+    "react": "^18.1.0-next-f7cf077cc-20220412",
+    "react-dom": "^18.1.0-next-f7cf077cc-20220412",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sendbird-uikit": "^2.7.0",
