--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,14 @@
 name: CI
 
-on: pull_request
+on: 
+  pull_request:
 
 jobs:
-  build:
-    name: Test
+  auto-merge:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup node
-        uses: actions/setup-node@v1
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Lint
-        run: yarn lint
-      - name: Test
-        run: yarn test
-
-  dependabot:
-    needs:
-      - build
-    runs-on: ubuntu-latest
-    steps:
-      - name: auto-merge
-        uses: ridedott/dependabot-auto-merge-action@main
+      - uses: myungsangBaek/action-dependabot-auto-merge@v2
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          target: minor
+          github-token: ${{ secrets.GITHUB_TOKEN }}
