[FEATURE] Use devextream

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.26.1",
+    "devextreme": "21.2.7",
+    "devextreme-react": "21.2.7",
     "react": "^18.1.0-next-f7cf077cc-20220412",
     "react-dom": "^18.1.0-next-f7cf077cc-20220412",
     "react-router-dom": "^6.3.0",
